--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -7,8 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 
-
-
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -115,20 +113,6 @@
       border-radius: 8px;
       padding: 10px;
       margin: 5px 0;
-      cursor: move;
-      transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.2s ease;
-      position: relative;
-    }
-    .turn-entry.dragging {
-      opacity: 0.7;
-      transform: scale(1.05);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-      z-index: 100;
-    }
-    .turn-entry.drag-over {
-      border: 2px dashed #FFC107;
-      background: #4A4B54;
-      transform: translateY(2px);
     }
     .turn-entry p {
       margin: 5px 0;
@@ -140,10 +124,6 @@
       border-radius: 6px;
       border: none;
       cursor: pointer;
-      transition: transform 0.1s ease;
-    }
-    .accept-btn:hover, .decline-btn:hover, .replace-btn:hover, .revert-btn:hover {
-      transform: scale(1.05);
     }
     .accept-btn {
       background-color: #4CAF50;
@@ -177,13 +157,6 @@
     .day-scroll {
       -ms-overflow-style: none;
       scrollbar-width: none;
-    }
-    @keyframes slide {
-      from { transform: translateY(10px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
-    .turn-entry {
-      animation: slide 0.3s ease;
     }
   </style>
 
@@ -340,32 +313,6 @@
       }
     }
   
-    async function handleReorder(title, date, newUserOrder) {
-      try {
-        const response = await fetch("https://beemazing.onrender.com/api/reorder-turns", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            adminEmail,
-            title,
-            date,
-            users: newUserOrder
-          })
-        });
-  
-        const data = await response.json();
-        if (!response.ok) throw new Error(data.error || "Failed to reorder turns");
-  
-        setTimeout(() => loadTasks(), 500);
-      } catch (err) {
-        console.error("Error reordering turns:", err);
-        const errorDiv = document.createElement("div");
-        errorDiv.style.color = "red";
-        errorDiv.textContent = `Error: ${err.message}`;
-        document.getElementById("taskContainer").appendChild(errorDiv);
-      }
-    }
-  
     async function loadTasks() {
       try {
         const res = await fetch(`https://beemazing.onrender.com/get-tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
@@ -417,7 +364,7 @@
             <h3 class="task-title">${title}${pendingCount > 0 ? `<span class="notification-bubble">${pendingCount}</span>` : ''}</h3>
             <div class="task-details${expandedTasks.has(title) ? ' show' : ''}">
               ${turns.map(turn => `
-                <div class="turn-entry" draggable="true" data-index="${turn.index}">
+                <div class="turn-entry">
                   <p>Turn ${turn.index + 1}: ${turn.user} - ${turn.isCompleted ? 'Accepted' : turn.isPending ? 'Waiting for Review' : 'Pending'}</p>
                   ${turn.isPending && !turn.isCompleted ? `
                     <button class="accept-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'accept', '${turn.user}', event)">Accept</button>
@@ -445,45 +392,6 @@
             } else {
               expandedTasks.delete(title);
             }
-          });
-  
-          const turnEntries = div.querySelectorAll(".turn-entry");
-          turnEntries.forEach(turn => {
-            turn.addEventListener("dragstart", (e) => {
-              turn.classList.add("dragging");
-              e.dataTransfer.setData("text/plain", turn.dataset.index);
-            });
-  
-            turn.addEventListener("dragend", () => {
-              turn.classList.remove("dragging");
-              turnEntries.forEach(t => t.classList.remove("drag-over"));
-            });
-  
-            turn.addEventListener("dragover", (e) => {
-              e.preventDefault();
-              turn.classList.add("drag-over");
-            });
-  
-            turn.addEventListener("dragleave", () => {
-              turn.classList.remove("drag-over");
-            });
-  
-            turn.addEventListener("drop", (e) => {
-              e.preventDefault();
-              turn.classList.remove("drag-over");
-              const draggedIndex = parseInt(e.dataTransfer.getData("text/plain"));
-              const droppedIndex = parseInt(turn.dataset.index);
-  
-              if (draggedIndex !== droppedIndex) {
-                const newTurns = [...turns];
-                // Swap the turns at draggedIndex and droppedIndex
-                [newTurns[draggedIndex], newTurns[droppedIndex]] = [newTurns[droppedIndex], newTurns[draggedIndex]];
-                // Update indices to reflect new order
-                newTurns.forEach((t, i) => t.index = i);
-                const newUserOrder = newTurns.map(t => t.user);
-                handleReorder(title, date, newUserOrder);
-              }
-            });
           });
         });
   
@@ -569,11 +477,6 @@
   
     fetchUsers().then(() => generateScrollableDates());
   </script>
-
-
-
-
-
 
 
 
