--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -7,6 +7,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 
+
+
+
+
+
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -37,6 +42,9 @@
       padding: 5px 10px;
       border-radius: 6px;
       cursor: pointer;
+    }
+    .month-nav button:hover {
+      background: #FFD54F;
     }
     .day-scroll-wrapper {
       display: flex;
@@ -113,6 +121,15 @@
       border-radius: 8px;
       padding: 10px;
       margin: 5px 0;
+      cursor: move;
+      border: 2px solid transparent;
+    }
+    .turn-entry.dragging {
+      opacity: 0.7;
+      border: 2px solid #FFC107;
+    }
+    .turn-entry.drag-over {
+      border: 2px dashed #FFC107;
     }
     .turn-entry p {
       margin: 5px 0;
@@ -159,6 +176,9 @@
       scrollbar-width: none;
     }
   </style>
+
+
+
 
 
 
@@ -237,6 +257,7 @@
           btn.disabled = false;
           btn.style.opacity = "1";
         });
+        setTimeout(() => errorDiv.remove(), 3000);
       }
     }
   
@@ -244,7 +265,14 @@
       const taskEntry = event.target.closest(".task-entry");
       const select = taskEntry.querySelector(`#replace-select-${index}`);
       const newUser = select.value;
-      if (!newUser) return;
+      if (!newUser || newUser === originalUser) {
+        const errorDiv = document.createElement("div");
+        errorDiv.style.color = "red";
+        errorDiv.textContent = "Please select a different user.";
+        taskEntry.appendChild(errorDiv);
+        setTimeout(() => errorDiv.remove(), 3000);
+        return;
+      }
   
       try {
         const response = await fetch("https://beemazing.onrender.com/api/replace-user", {
@@ -255,7 +283,7 @@
             title,
             date,
             selectedDate,
-            index,
+            index: parseInt(index),
             originalUser,
             newUser
           })
@@ -264,6 +292,9 @@
         const data = await response.json();
         if (!response.ok) throw new Error(data.error || "Failed to replace user");
   
+        const turnEntry = taskEntry.querySelector(`.turn-entry[data-index="${index}"]`);
+        turnEntry.querySelector("p").textContent = `Turn ${parseInt(index) + 1}: ${newUser} - Pending`;
+        turnEntry.querySelector("select").value = "";
         setTimeout(() => loadTasks(), 500);
       } catch (err) {
         console.error("Error replacing user:", err);
@@ -271,6 +302,7 @@
         errorDiv.style.color = "red";
         errorDiv.textContent = `Error: ${err.message}`;
         taskEntry.appendChild(errorDiv);
+        setTimeout(() => errorDiv.remove(), 3000);
       }
     }
   
@@ -310,6 +342,34 @@
           btn.disabled = false;
           btn.style.opacity = "1";
         });
+        setTimeout(() => errorDiv.remove(), 3000);
+      }
+    }
+  
+    async function handleReorder(title, date, newUserOrder) {
+      try {
+        const response = await fetch("https://beemazing.onrender.com/api/reorder-turns", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            adminEmail,
+            title,
+            date,
+            users: newUserOrder
+          })
+        });
+  
+        const data = await response.json();
+        if (!response.ok) throw new Error(data.error || "Failed to reorder turns");
+  
+        setTimeout(() => loadTasks(), 500);
+      } catch (err) {
+        console.error("Error reordering turns:", err);
+        const errorDiv = document.createElement("div");
+        errorDiv.style.color = "red";
+        errorDiv.textContent = `Error: ${err.message}`;
+        document.getElementById("taskContainer").appendChild(errorDiv);
+        setTimeout(() => errorDiv.remove(), 3000);
       }
     }
   
@@ -327,7 +387,7 @@
         const tasksByTitle = {};
         tasks.forEach(task => {
           if (!tasksByTitle[task.title]) {
-            tasksByTitle[task.title] = { turns: [], pendingCount: 0, date: task.date };
+            tasksByTitle[task.title] = { turns: [], pendingCount: 0, date: task.date, userOrder: task.users || [] };
           }
           const pendingCompletions = task.pendingCompletions?.[selectedDate] || [];
           const completions = task.completions?.[selectedDate] || [];
@@ -357,14 +417,14 @@
         });
   
         Object.keys(tasksByTitle).sort().forEach(title => {
-          const { turns, pendingCount, date } = tasksByTitle[title];
+          const { turns, pendingCount, date, userOrder } = tasksByTitle[title];
           const div = document.createElement("div");
           div.className = "task-entry";
           div.innerHTML = `
             <h3 class="task-title">${title}${pendingCount > 0 ? `<span class="notification-bubble">${pendingCount}</span>` : ''}</h3>
             <div class="task-details${expandedTasks.has(title) ? ' show' : ''}">
               ${turns.map(turn => `
-                <div class="turn-entry">
+                <div class="turn-entry" draggable="true" data-index="${turn.index}" data-user="${turn.user}">
                   <p>Turn ${turn.index + 1}: ${turn.user} - ${turn.isCompleted ? 'Accepted' : turn.isPending ? 'Waiting for Review' : 'Pending'}</p>
                   ${turn.isPending && !turn.isCompleted ? `
                     <button class="accept-btn" onclick="handleDecision('${title}', '${turn.date}', ${turn.index}, 'accept', '${turn.user}', event)">Accept</button>
@@ -392,6 +452,56 @@
             } else {
               expandedTasks.delete(title);
             }
+          });
+  
+          const turnEntries = div.querySelectorAll(".turn-entry");
+          let draggedIndex = null;
+  
+          turnEntries.forEach(turn => {
+            turn.addEventListener("dragstart", (e) => {
+              turn.classList.add("dragging");
+              draggedIndex = parseInt(turn.dataset.index);
+              e.dataTransfer.setData("text/plain", draggedIndex);
+            });
+  
+            turn.addEventListener("dragend", () => {
+              turn.classList.remove("dragging");
+              turnEntries.forEach(t => t.classList.remove("drag-over"));
+              draggedIndex = null;
+            });
+  
+            turn.addEventListener("dragover", (e) => {
+              e.preventDefault();
+              const dropIndex = parseInt(turn.dataset.index);
+              if (draggedIndex !== null && draggedIndex !== dropIndex) {
+                turn.classList.add("drag-over");
+              }
+            });
+  
+            turn.addEventListener("dragleave", () => {
+              turn.classList.remove("drag-over");
+            });
+  
+            turn.addEventListener("drop", async (e) => {
+              e.preventDefault();
+              turn.classList.remove("drag-over");
+              const dropIndex = parseInt(turn.dataset.index);
+              if (draggedIndex !== null && draggedIndex !== dropIndex) {
+                const newTurns = [...turns];
+                // Swap users
+                [newTurns[draggedIndex].user, newTurns[dropIndex].user] = [newTurns[dropIndex].user, newTurns[draggedIndex].user];
+                // Update UI immediately
+                const draggedTurn = turnEntries[draggedIndex];
+                const droppedTurn = turnEntries[dropIndex];
+                draggedTurn.querySelector("p").textContent = `Turn ${draggedIndex + 1}: ${newTurns[draggedIndex].user} - ${newTurns[draggedIndex].isCompleted ? 'Accepted' : newTurns[draggedIndex].isPending ? 'Waiting for Review' : 'Pending'}`;
+                droppedTurn.querySelector("p").textContent = `Turn ${dropIndex + 1}: ${newTurns[dropIndex].user} - ${newTurns[dropIndex].isCompleted ? 'Accepted' : newTurns[dropIndex].isPending ? 'Waiting for Review' : 'Pending'}`;
+                draggedTurn.dataset.user = newTurns[draggedIndex].user;
+                droppedTurn.dataset.user = newTurns[dropIndex].user;
+                // Send to server
+                const newUserOrder = newTurns.map(t => t.user);
+                await handleReorder(title, date, newUserOrder);
+              }
+            });
           });
         });
   
@@ -477,6 +587,9 @@
   
     fetchUsers().then(() => generateScrollableDates());
   </script>
+
+
+
 
 
 
