--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -927,7 +927,7 @@
 
 
 
-        async function loadUserTasks(userName, selectedDate = new Date().toLocaleDateString("sv-SE")) {
+async function loadUserTasks(userName, selectedDate = new Date().toLocaleDateString("sv-SE")) {
   const userTasksDiv = document.getElementById("userTasks");
   userTasksDiv.innerHTML = "<p>Loading tasks...</p>";
 
@@ -957,7 +957,6 @@
       console.warn("Skipping invalid task:", task);
       return false;
     }
-    if (!task.users.includes(userName)) return false;
 
     const dateRange = task.date.split(" to ");
     const startDateStr = dateRange[0];
@@ -972,18 +971,19 @@
     }
     if (currentDate < startDate || currentDate > endDate) return false;
 
-    if (task.repeat === "Daily" && task.timesPerDay > 1) return true;
+    const repeat = task.repeat || "Daily";
+    let requiredTimes = task.timesPerDay || 1;
+    if (repeat === "Weekly") requiredTimes = task.timesPerWeek || 1;
+    if (repeat === "Monthly") requiredTimes = task.timesPerMonth || 1;
 
-    if (task.repeat === "Daily" && task.timesPerDay === 1) {
-      const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
-      const userOrder = [...task.users];
-      const currentIndex = diffDays % userOrder.length;
-      const currentTurn = userOrder[currentIndex] || "";
-      return currentTurn === userName;
+    const userOrder = [...task.users];
+    const fullTurnOrder = [];
+    for (let i = 0; i < requiredTimes; i++) {
+      const user = task.tempTurnReplacement?.[selectedDate]?.[i] || userOrder[i % userOrder.length];
+      fullTurnOrder.push(user);
     }
 
-    const currentTurn = task.tempTurnReplacement?.replacement || task.turn || task.users[0] || "";
-    return currentTurn === userName;
+    return userOrder.includes(userName) || fullTurnOrder.includes(userName);
   });
 
   userTasksDiv.innerHTML = "";
@@ -1003,36 +1003,51 @@
     const startDateStr = dateRange[0];
     const startDate = parseLocalDate(startDateStr);
     const currentDate = parseLocalDate(selectedDate);
-    let currentTurn;
 
-    let requiredTimes = task.timesPerDay || task.timesPerWeek || task.timesPerMonth || 1;
-    if (task.repeat === "Weekly") requiredTimes = task.timesPerWeek || 1;
-    if (task.repeat === "Monthly") requiredTimes = task.timesPerMonth || 1;
+    const repeat = task.repeat || "Daily";
+    let requiredTimes = task.timesPerDay || 1;
+    if (repeat === "Weekly") requiredTimes = task.timesPerWeek || 1;
+    if (repeat === "Monthly") requiredTimes = task.timesPerMonth || 1;
+
+    const userOrder = [...task.users];
+    const fullTurnOrder = [];
+    for (let i = 0; i < requiredTimes; i++) {
+      const user = task.tempTurnReplacement?.[selectedDate]?.[i] || userOrder[i % userOrder.length];
+      fullTurnOrder.push(user);
+    }
 
     let pendingUsers = Array.isArray(task.pendingCompletions?.[selectedDate]) ? task.pendingCompletions[selectedDate] : [];
     let completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
     let completedTimes = completedUsers.length;
 
-    if (task.repeat === "Daily" && task.timesPerDay > 1) {
-      const userOrder = [...task.users];
-      const totalRequiredCompletions = task.timesPerDay;
-      const completionIndex = (pendingUsers.length + completedTimes) % userOrder.length;
-      currentTurn = userOrder[completionIndex] || userOrder[0];
-    } else if (task.repeat === "Daily" && task.timesPerDay === 1) {
-      const diffDays = Math.floor((currentDate - startDate) / (1000 * 60 * 60 * 24));
-      const userOrder = [...task.users];
-      const currentIndex = diffDays % userOrder.length;
-      currentTurn = userOrder[currentIndex] || userOrder[0];
-    } else {
-      currentTurn = task.tempTurnReplacement?.replacement || task.turn || task.users[0] || "";
-    }
-
     let progressText = completedTimes >= requiredTimes
       ? `<span style="color: green; font-weight: bold;">Completed</span>`
       : `${completedTimes}/${requiredTimes}`;
 
+    const userTurnIndexes = [];
+    const replacedIndexes = [];
+    fullTurnOrder.forEach((user, index) => {
+      if (user === userName) {
+        userTurnIndexes.push(index);
+      } else if (userOrder[index % userOrder.length] === userName && user !== userName) {
+        replacedIndexes.push({ index, by: user });
+      }
+    });
+
+    const isPending = pendingUsers.includes(userName);
+    const isCompleted = completedUsers.includes(userName);
+
+    const currentTurnIndex = completedTimes < requiredTimes ? completedTimes : 0;
+    const currentTurn = fullTurnOrder[currentTurnIndex];
     const showTurn = completedTimes < requiredTimes;
-    const turnText = showTurn ? `Turn: ${currentTurn}<br>` : '';
+
+    let turnText = '';
+    if (replacedIndexes.length > 0) {
+      const replacements = replacedIndexes.map(r => `Replaced by ${r.by} for Turn ${r.index + 1}`).join('<br>');
+      turnText = `<span style="color: orange;">${replacements}</span><br>`;
+    } else if (showTurn) {
+      turnText = `Turn: ${currentTurn}<br>`;
+    }
 
     taskDiv.innerHTML = `
       <strong>${task.title || "Untitled Task"}</strong><br>
@@ -1058,26 +1073,11 @@
     statusDiv.style.marginTop = "10px";
     statusDiv.style.fontWeight = "bold";
 
-    const fullTurnOrder = [];
-    const userOrder = [...task.users];
-    for (let i = 0; i < requiredTimes; i++) {
-      fullTurnOrder.push(userOrder[i % userOrder.length] || "");
-    }
-
-    const userTurnIndexes = [];
-    fullTurnOrder.forEach((user, index) => {
-      if (user === userName) userTurnIndexes.push(index);
-    });
-
-    const isPending = pendingUsers.includes(userName);
-    const isCompleted = completedUsers.includes(userName);
-
-    if (userTurnIndexes.length === 0) {
+    if (userTurnIndexes.length === 0 && replacedIndexes.length === 0) {
       statusDiv.innerHTML = "You: Not Assigned";
       statusDiv.style.color = "gray";
     } else {
       statusDiv.innerHTML = "You:<br>";
-
       const taskDate = new Date(selectedDate);
       const now = new Date();
       now.setHours(0, 0, 0, 0);
@@ -1109,16 +1109,18 @@
         const line = `<span style="color: ${color}">${emoji} ${statusText}</span><br>`;
         statusDiv.innerHTML += line;
       });
+
+      replacedIndexes.forEach(r => {
+        const line = `<span style="color: orange">❌ Turn ${r.index + 1} - Replaced by ${r.by}</span><br>`;
+        statusDiv.innerHTML += line;
+      });
     }
 
     taskDiv.appendChild(statusDiv);
-
     taskDiv.addEventListener("click", () => showTaskDetails(task));
     userTasksDiv.appendChild(taskDiv);
   });
 }
-
-
 
 
 
