--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -548,165 +548,171 @@ body {
 
         async function loadTasksForDate(selectedDate) {
   const adminEmail = localStorage.getItem("currentAdminEmail");
-  if (!adminEmail) return;
-
-  const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
-  const result = await response.json();
-  const tasks = result.tasks || [];
-
-  const taskList = document.getElementById("taskList");
-  taskList.innerHTML = "";
-
-  function parseLocalDate(dateStr) {
-    if (!dateStr) return new Date(3000, 0, 1);
-    const [year, month, day] = dateStr.split("-").map(Number);
-    return new Date(year, month - 1, day);
-  }
-
-  const selected = parseLocalDate(selectedDate);
-  const today = new Date();
-  today.setHours(0, 0, 0, 0);
-
-  const visibleTasks = tasks.filter(task => {
-    if (!task.date) return false;
-    const range = task.date.split(" to ");
-    const from = parseLocalDate(range[0]);
-    const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
-    return selected >= from && selected <= to;
-  });
-
-  if (visibleTasks.length === 0) {
-    taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
+  if (!adminEmail) {
+    document.getElementById("taskList").innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No admin email found 🌙</div>`;
     return;
   }
 
-  visibleTasks.forEach((task) => {
-    const taskDiv = document.createElement("div");
-    taskDiv.className = "task-item";
-    taskDiv.dataset.taskTitle = task.title;
-    taskDiv.dataset.taskDate = task.date;
+  try {
+    const response = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+    if (!response.ok) throw new Error(`HTTP error ${response.status}`);
+    const result = await response.json();
+    const tasks = result.tasks || [];
 
-    const userOrder = task.users && Array.isArray(task.users) ? [...task.users] : [];
-    const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
-                        task.repeat === "Weekly" ? task.timesPerWeek || 1 :
-                        task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+    const taskList = document.getElementById("taskList");
+    taskList.innerHTML = "";
 
-    let currentTurn = null;
-    let nextUser = null;
-    let completedCount = 0;
-
-    // Get actual completions for the selected date
-    const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
-    const completedSet = new Set(completedUsers);
-    completedCount = completedUsers.length;
-
-    // Determine the last known turn (before active day for future predictions)
-    let lastTurnUser = task.turn || (userOrder.length > 0 ? userOrder[0] : null);
-    let lastTurnDate = parseLocalDate(task.date ? task.date.split(" to ")[0] : null);
-
-    // Find the most recent day with completions strictly before today
-    if (task.completions) {
-      const completionDates = Object.keys(task.completions)
-        .filter(date => parseLocalDate(date) < today)
-        .sort((a, b) => parseLocalDate(b) - parseLocalDate(a));
-      if (completionDates.length > 0) {
-        lastTurnDate = parseLocalDate(completionDates[0]);
-        const lastCompletions = task.completions[completionDates[0]];
-        if (lastCompletions.length > 0) {
-          lastTurnUser = lastCompletions[lastCompletions.length - 1];
-        }
-      }
+    function parseLocalDate(dateStr) {
+      if (!dateStr) return new Date(3000, 0, 1);
+      const [year, month, day] = dateStr.split("-").map(Number);
+      return new Date(year, month - 1, day);
     }
 
-    // Calculate days between last turn date and selected date
-    const daysDiff = Math.floor((selected - lastTurnDate) / (1000 * 60 * 60 * 24));
-    let currentIndex = userOrder.indexOf(lastTurnUser);
-    if (currentIndex === -1) currentIndex = 0;
+    const selected = parseLocalDate(selectedDate);
+    const today = new Date();
+    today.setHours(0, 0, 0, 0);
 
-    if (selected < today) {
-      // Past days: Use actual completions
-      for (let i = 0; i < userOrder.length; i++) {
-        if (!completedSet.has(userOrder[i])) {
-          currentTurn = userOrder[i];
-          break;
-        }
-      }
-      if (currentTurn) {
-        const currentIndex = userOrder.indexOf(currentTurn);
-        for (let i = currentIndex + 1; i < userOrder.length; i++) {
-          if (!completedSet.has(userOrder[i])) {
-            nextUser = userOrder[i];
-            break;
+    const visibleTasks = tasks.filter(task => {
+      if (!task.date) return false;
+      const range = task.date.split(" to ");
+      const from = parseLocalDate(range[0]);
+      const to = range[1] ? parseLocalDate(range[1]) : new Date(3000, 0, 1);
+      return selected >= from && selected <= to;
+    });
+
+    if (visibleTasks.length === 0) {
+      taskList.innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">No tasks for this day 🌙</div>`;
+      return;
+    }
+
+    visibleTasks.forEach((task) => {
+      const taskDiv = document.createElement("div");
+      taskDiv.className = "task-item";
+      taskDiv.dataset.taskTitle = task.title;
+      taskDiv.dataset.taskDate = task.date;
+
+      const userOrder = task.users && Array.isArray(task.users) ? [...task.users] : [];
+      const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
+                         task.repeat === "Weekly" ? task.timesPerWeek || 1 :
+                         task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+      const tempTurnReplacement = task.tempTurnReplacement?.[selectedDate] || {};
+      const assignedUsers = [...userOrder];
+      Object.entries(tempTurnReplacement).forEach(([index, user]) => {
+        assignedUsers[parseInt(index)] = user;
+      });
+
+      let currentTurn = null;
+      let nextUser = null;
+      let completedCount = 0;
+
+      // Combine completions and pendingCompletions
+      const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
+      const pendingUsers = Array.isArray(task.pendingCompletions?.[selectedDate]) ? task.pendingCompletions[selectedDate] : [];
+      const allCompletedUsers = [...new Set([...completedUsers, ...pendingUsers])];
+      const completedSet = new Set(allCompletedUsers);
+      completedCount = allCompletedUsers.length;
+
+      // Determine the last known turn
+      let lastTurnUser = task.turn || (userOrder.length > 0 ? userOrder[0] : null);
+      let lastTurnDate = parseLocalDate(task.date ? task.date.split(" to ")[0] : null);
+
+      if (task.completions) {
+        const completionDates = Object.keys(task.completions)
+          .filter(date => parseLocalDate(date) < today)
+          .sort((a, b) => parseLocalDate(b) - parseLocalDate(a));
+        if (completionDates.length > 0) {
+          lastTurnDate = parseLocalDate(completionDates[0]);
+          const lastCompletions = task.completions[completionDates[0]];
+          if (lastCompletions.length > 0) {
+            lastTurnUser = lastCompletions[lastCompletions.length - 1];
           }
         }
       }
-    } else if (selected.getTime() === today.getTime()) {
-      // Active day: Use actual completions with predicted sequence
-      const totalCompletionsSoFar = daysDiff * repeatLimit;
-      let predictedIndex = (currentIndex + totalCompletionsSoFar) % userOrder.length;
 
-      // Adjust for actual completions
-      let tempIndex = predictedIndex;
-      let completionsCounted = completedCount;
-      while (completionsCounted > 0 && userOrder.length > 0) {
-        if (completedSet.has(userOrder[tempIndex])) {
-          completionsCounted--;
+      const daysDiff = Math.floor((selected - lastTurnDate) / (1000 * 60 * 60 * 24));
+      let currentIndex = assignedUsers.indexOf(lastTurnUser);
+      if (currentIndex === -1) currentIndex = 0;
+
+      if (selected < today) {
+        for (let i = 0; i < assignedUsers.length; i++) {
+          if (!completedSet.has(assignedUsers[i])) {
+            currentTurn = assignedUsers[i];
+            break;
+          }
         }
-        tempIndex = (tempIndex + 1) % userOrder.length;
-      }
+        if (currentTurn) {
+          const currentIndex = assignedUsers.indexOf(currentTurn);
+          for (let i = currentIndex + 1; i < assignedUsers.length; i++) {
+            if (!completedSet.has(assignedUsers[i])) {
+              nextUser = assignedUsers[i];
+              break;
+            }
+          }
+        }
+      } else if (selected.getTime() === today.getTime()) {
+        const totalCompletionsSoFar = daysDiff * repeatLimit;
+        let predictedIndex = (currentIndex + totalCompletionsSoFar) % assignedUsers.length;
 
-      currentTurn = userOrder[tempIndex];
+        let tempIndex = predictedIndex;
+        let completionsCounted = completedCount;
+        while (completionsCounted > 0 && assignedUsers.length > 0) {
+          if (completedSet.has(assignedUsers[tempIndex])) {
+            completionsCounted--;
+          }
+          tempIndex = (tempIndex + 1) % assignedUsers.length;
+        }
 
-      // Set next user based on sequence, or "—" if fully completed
-      if (currentTurn && completedCount < repeatLimit) {
-        nextUser = userOrder[(tempIndex + 1) % userOrder.length];
+        currentTurn = assignedUsers[tempIndex];
+
+        if (currentTurn && completedCount < repeatLimit) {
+          nextUser = assignedUsers[(tempIndex + 1) % assignedUsers.length];
+        } else {
+          nextUser = "—";
+        }
       } else {
-        nextUser = "—";
+        const totalCompletions = daysDiff * repeatLimit;
+        currentIndex = (currentIndex + totalCompletions) % assignedUsers.length;
+        currentTurn = assignedUsers[currentIndex];
+        nextUser = assignedUsers[(currentIndex + 1) % assignedUsers.length];
       }
-    } else {
-      // Future days: Predict fixed turns
-      const totalCompletions = daysDiff * repeatLimit;
-      currentIndex = (currentIndex + totalCompletions) % userOrder.length;
-      currentTurn = userOrder[currentIndex];
-      nextUser = userOrder[(currentIndex + 1) % userOrder.length];
-      completedCount = 0;
-    }
 
-    currentTurn = currentTurn || "All done!";
-    nextUser = nextUser || "—";
-    const isCompleted = completedCount >= repeatLimit;
+      currentTurn = currentTurn || "All done!";
+      nextUser = nextUser || "—";
+      const isCompleted = completedCount >= repeatLimit;
 
-    taskDiv.innerHTML = `
-      <strong>${task.title}</strong><br>
-      Turn: ${currentTurn}<br>
-      Next: ${nextUser}<br>
-      Completed: ${completedCount}/${repeatLimit}<br>
-      ${isCompleted ? `<span style="color: green; font-weight: bold;">Completed</span><br>` : ""}
-      <button class="delete-btn">Delete</button>
-    `;
+      taskDiv.innerHTML = `
+        <strong>${task.title}</strong><br>
+        Turn: ${currentTurn}<br>
+        Next: ${nextUser}<br>
+        Completed: ${completedCount}/${repeatLimit}<br>
+        ${isCompleted ? `<span style="color: green; font-weight: bold;">Completed</span><br>` : ""}
+        <button class="delete-btn">Delete</button>
+      `;
 
-    taskDiv.addEventListener("click", async (e) => {
-      if (!e.target.classList.contains("delete-btn")) {
-        const latest = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`);
-        const latestResult = await latest.json();
-        const latestTask = latestResult.tasks.find(t => t.title === task.title && t.date === task.date);
-        if (latestTask) showTaskDetails(latestTask);
-      }
+      taskDiv.addEventListener("click", async (e) => {
+        if (!e.target.classList.contains("delete-btn")) {
+          const latest = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, { cache: "no-store" });
+          const latestResult = await latest.json();
+          const latestTask = latestResult.tasks.find(t => t.title === task.title && t.date === task.date);
+          if (latestTask) showTaskDetails(latestTask);
+        }
+      });
+
+      taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
+        if (confirm("Are you sure you want to delete this task?")) {
+          await deleteTaskFromBackend(task.title, task.date);
+          loadTasksForDate(selectedDate);
+        }
+      });
+
+      taskList.appendChild(taskDiv);
+      enableSwipeToDelete(taskDiv);
     });
-
-    taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
-      if (confirm("Are you sure you want to delete this task?")) {
-        await deleteTaskFromBackend(task.title, task.date);
-        loadTasksForDate(selectedDate);
-      }
-    });
-
-    taskList.appendChild(taskDiv);
-    enableSwipeToDelete(taskDiv);
-  });
+  } catch (err) {
+    console.error("Error loading tasks:", err);
+    document.getElementById("taskList").innerHTML = `<div style="text-align:center; margin-top: 40px; color: #ccc;">Error loading tasks: ${err.message}</div>`;
+  }
 }
-
-
 
 
 
@@ -716,21 +722,25 @@ async function showTaskDetails(task) {
   const selectedDate = document.querySelector(".day.selected")?.dataset.date;
   if (!selectedDate) return;
 
-  const userOrder = [...task.users];
+  const userOrder = task.users && Array.isArray(task.users) ? [...task.users] : [];
   const repeatLimit = task.repeat === "Daily" ? task.timesPerDay || 1 :
                       task.repeat === "Weekly" ? task.timesPerWeek || 1 :
                       task.repeat === "Monthly" ? task.timesPerMonth || 1 : 1;
+  const tempTurnReplacement = task.tempTurnReplacement?.[selectedDate] || {};
+  const assignedUsers = [...userOrder];
+  Object.entries(tempTurnReplacement).forEach(([index, user]) => {
+    assignedUsers[parseInt(index)] = user;
+  });
 
-  // Get actual completions for the selected date
   const completedUsers = Array.isArray(task.completions?.[selectedDate]) ? task.completions[selectedDate] : [];
-  const completedCount = completedUsers.length;
-  const completedSet = new Set(completedUsers);
+  const pendingUsers = Array.isArray(task.pendingCompletions?.[selectedDate]) ? task.pendingCompletions[selectedDate] : [];
+  const allCompletedUsers = [...new Set([...completedUsers, ...pendingUsers])];
+  const completedCount = allCompletedUsers.length;
+  const completedSet = new Set(allCompletedUsers);
 
-  // Determine the last known turn
-  let lastTurnUser = task.turn || userOrder[0];
+  let lastTurnUser = task.turn || (userOrder.length > 0 ? userOrder[0] : null);
   let lastTurnDate = task.date.split(" to ")[0];
 
-  // Find the most recent day with completions before selected date
   if (task.completions) {
     const completionDates = Object.keys(task.completions)
       .filter(date => new Date(date) < new Date(selectedDate))
@@ -755,57 +765,55 @@ async function showTaskDetails(task) {
   const selected = parseLocalDate(selectedDate);
   const today = new Date();
   today.setHours(0, 0, 0, 0);
-  let currentIndex = userOrder.indexOf(lastTurnUser);
+  let currentIndex = assignedUsers.indexOf(lastTurnUser);
+  if (currentIndex === -1) currentIndex = 0;
 
   if (selected < today) {
-    // Past days: Use actual completions
-    for (let i = 0; i < userOrder.length; i++) {
-      if (!completedSet.has(userOrder[i])) {
-        currentTurn = userOrder[i];
+    for (let i = 0; i < assignedUsers.length; i++) {
+      if (!completedSet.has(assignedUsers[i])) {
+        currentTurn = assignedUsers[i];
         break;
       }
     }
     if (currentTurn) {
-      const currentIndex = userOrder.indexOf(currentTurn);
-      for (let i = currentIndex + 1; i < userOrder.length; i++) {
-        if (!completedSet.has(userOrder[i])) {
-          nextUser = userOrder[i];
+      const currentIndex = assignedUsers.indexOf(currentTurn);
+      for (let i = currentIndex + 1; i < assignedUsers.length; i++) {
+        if (!completedSet.has(assignedUsers[i])) {
+          nextUser = assignedUsers[i];
           break;
         }
       }
     }
   } else if (selected.getTime() === today.getTime()) {
-    // Active day: Use actual completions
-    for (let i = 0; i < userOrder.length; i++) {
-      if (!completedSet.has(userOrder[(currentIndex + i) % userOrder.length])) {
-        currentTurn = userOrder[(currentIndex + i) % userOrder.length];
+    for (let i = 0; i < assignedUsers.length; i++) {
+      if (!completedSet.has(assignedUsers[(currentIndex + i) % assignedUsers.length])) {
+        currentTurn = assignedUsers[(currentIndex + i) % assignedUsers.length];
         break;
       }
     }
     if (currentTurn) {
-      const currentIndex = userOrder.indexOf(currentTurn);
-      for (let i = currentIndex + 1; i < userOrder.length; i++) {
-        if (!completedSet.has(userOrder[i])) {
-          nextUser = userOrder[i];
+      const currentIndex = assignedUsers.indexOf(currentTurn);
+      for (let i = currentIndex + 1; i < assignedUsers.length; i++) {
+        if (!completedSet.has(assignedUsers[i])) {
+          nextUser = assignedUsers[i];
           break;
         }
       }
       if (!nextUser) {
-        for (let i = 0; i < userOrder.length; i++) {
-          if (!completedSet.has(userOrder[i])) {
-            nextUser = userOrder[i];
+        for (let i = 0; i < assignedUsers.length; i++) {
+          if (!completedSet.has(assignedUsers[i])) {
+            nextUser = assignedUsers[i];
             break;
           }
         }
       }
     }
   } else {
-    // Future days: Predict fixed turns
     const daysDiff = Math.floor((selected - parseLocalDate(lastTurnDate)) / (1000 * 60 * 60 * 24));
     const totalCompletions = daysDiff * repeatLimit;
-    currentIndex = (currentIndex + totalCompletions) % userOrder.length;
-    currentTurn = userOrder[currentIndex];
-    nextUser = userOrder[(currentIndex + 1) % userOrder.length];
+    currentIndex = (currentIndex + totalCompletions) % assignedUsers.length;
+    currentTurn = assignedUsers[currentIndex];
+    nextUser = assignedUsers[(currentIndex + 1) % assignedUsers.length];
   }
 
   currentTurn = currentTurn || "All done!";
@@ -828,10 +836,10 @@ async function showTaskDetails(task) {
     <strong>Completed:</strong> ${completedCount}/${repeatLimit}<br>
   `;
 
-  if (completedUsers.length > 0) {
+  if (allCompletedUsers.length > 0) {
     taskDetails += `
       <div style="margin-top: 8px;">
-        <strong>Completed by:</strong> ${completedUsers.join(", ")}
+        <strong>Completed by:</strong> ${allCompletedUsers.join(", ")}
         <button id="editCompletionBtn" style="margin-left: 10px; padding: 4px 8px; font-size: 12px; border-radius: 6px; background: var(--primary-color); color: var(--secondary-color); border: none; cursor: pointer;">Edit</button>
       </div>
     `;
@@ -868,12 +876,10 @@ async function showTaskDetails(task) {
     editBtn.addEventListener("click", (e) => {
       e.stopPropagation();
       modal.remove();
-      showEditCompletionModal(task, completedUsers, selectedDate, modal);
+      showEditCompletionModal(task, allCompletedUsers, selectedDate, modal);
     });
   }
 }
-
-
 
 
 
