--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -13,6 +13,22 @@
 
 
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+:root {
+    --primary-color: #FFC107;
+    --secondary-color: #212121;
+    --accent-color: #FFFFFF;
+    --light-bg: #1E1F26;
+    --text-color: #FFFFFF;
+    --footer-height: 70px;
+}
+
+
     body {
       font-family: 'Poppins', sans-serif;
       background-color: #1E1F26;
@@ -183,7 +199,7 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
-    background: var(--secondary-color); /* Changed to black */
+    background: var(--secondary-color);
     padding: 10px 0;
     box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
     z-index: 100;
@@ -191,57 +207,38 @@
 }
 .footer a {
     text-decoration: none;
-    color: var(--light-text);
+    color: var(--text-color);
     display: flex;
     flex-direction: column;
     align-items: center;
     transition: transform 0.3s ease;
 }
-        .footer a:hover {
-            transform: scale(1.1);
-        }
-
-
-
-
-
-
-
-
-
-        .footer-icon img {
+.footer a:hover {
+    transform: scale(1.1);
+}
+.footer-icon img {
     width: 40px;
     height: 40px;
-    filter: invert(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2)); /* Default: white */
+    filter: invert(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
 }
-
 .footer a.active img {
-    filter: none;
-    filter: invert(77%) sepia(88%) saturate(900%) hue-rotate(0deg) brightness(100%) contrast(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2)) !important;
+    filter: invert(77%) sepia(88%) saturate(900%) hue-rotate(0deg)
+        brightness(100%) contrast(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2)) !important;
 }
-
-
-
-
+.footer-icon span {
+    font-size: 12px;
+    margin-top: 5px;
+    font-weight: 600;
+}
 .footer a.active span {
     color: var(--primary-color);
 }
-
-
-
-
-
-
-
-        .footer-icon span {
-            font-size: 12px;
-            margin-top: 5px;
-            font-weight: 600;
-        }
-
-
-
-
+@media (max-width: 600px) {
+    .footer-icon img {
+        width: 35px;
+        height: 35px;
+    }
+}
   </style>
 
 
@@ -269,25 +266,26 @@
 
 
 
-  <a href="#" class="add-user-btn" id="addUserBtn" aria-label="Add User">+</a>
-  <div class="footer" id="footer">
-      <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon active" aria-label="Home">
-          <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-          <span>Home</span>
-      </a>
-      <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
-          <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
-          <span>Tasks</span>
-      </a>
-      <a href="/BeeMazing-Y1/mobile/4-Market/market.html" class="footer-icon" aria-label="Market">
-          <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
-          <span>Market</span>
-      </a>
-      <a href="/BeeMazing-Y1/mobile/5-Stats/stats.html" class="footer-icon" aria-label="Stats">
-          <img src="/BeeMazing-Y1/mobile/1-Home/StatsBtn.png" alt="Stats" />
-          <span>Stats</span>
-      </a>
-  </div>
+
+  <div class="footer">
+    <a id="homeFooterLink" class="footer-icon" href="/BeeMazing-Y1/mobile/1-Home/home.html" aria-label="Home">
+
+        <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
+        <span>Home</span>
+    </a>
+    <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
+        <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
+        <span>Profile</span>
+    </a>
+    <a href="#" id="marketButton" class="footer-icon" aria-label="Market">
+        <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
+        <span>Market</span>
+    </a>
+    <a href="#" id="rewardsButton" class="footer-icon" aria-label="Rewards">
+        <img src="/BeeMazing-Y1/mobile/1-Home/RewardsBtn.png" alt="Rewards" />
+        <span>Rewards</span>
+    </a>
+</div>
 
 
 
